--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 body {
     background-color: #E3E6E6;
 }
-
+a{
+    text-decoration: none;
+    color: inherit;
+}
 
 nav {
     display: flex;
@@ -236,7 +241,7 @@ main {
     padding: 0 .5rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-
+    margin-bottom: .5rem;
 
 }
 
@@ -309,6 +314,123 @@ main {
 .apper-on1200 {
     display: none;
 }
+
+
+
+
+.scroll{
+    overflow-x: scroll;
+    display: flex;
+    
+}
+
+
+
+.scroll-bar{
+    padding: 0 1rem;
+    margin-bottom: 1rem;
+}
+.scrollBar-container{
+    background-color: white;
+    padding: 2rem;
+}
+
+
+.red-heading{
+    display: flex;
+    align-items: center;
+    margin-bottom: .5rem;
+}
+
+.red-text{
+    color: #CC0C39;
+    font-size: 11px;
+    font-weight: bolder;
+    
+}
+
+
+.discount{
+    background-color: #CC0C39;
+    color: white;
+    padding: .3rem .5rem;
+    font-size: 12px;
+    display: inline-block;
+    margin-right: .5rem;
+}
+
+.price-container{
+    display: flex;
+}
+
+.value{
+    display: flex;
+    align-items: center;
+}
+
+.price{
+    font-size: 1.5rem;
+}
+
+.selling-price{
+    display: flex;
+    margin-right: 5px;
+}
+
+.selling-price span{
+    font-size: 12px;
+    margin-top: 4px;
+}
+
+.value i{
+    font-weight: light;
+}
+
+.mrp , .crossed-price{
+    font-size: 14px;
+}
+.mrp{
+    margin-right: 5px;
+}
+
+.crossed-price{
+    display: flex;
+    text-decoration:line-through;
+}
+
+
+.top-heading{
+    display: flex;
+    align-items: end;
+    margin-bottom: 1rem;
+}
+
+.top-heading h2{
+    margin-right: .5rem;
+}
+
+.card{
+    width: 200px;
+    margin-right: 1rem;
+    
+}
+
+.card .product{
+    background-color: #F7F8F8;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+.product img{
+    width: 100%;
+}
+.card .product-disc{
+    overflow:hidden;
+    font-size: 13px;
+    margin-top: .5rem;
+    margin-bottom: 1rem;
+}
+
+
 
 /* ++++++++++++++++++++++++++++++++++++++++++++ media querry ++++++++++++++++++++++++++++++++++++++++++ */
 
